deploy/miladyos-self/miladyos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miladyos
  namespace: miladyos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.miladyos.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: miladyos
            port:
              number: 8080
  tls:
  - hosts:
    - jenkins.miladyos.net
    secretName: jenkins-miladyos-net-tls
